# ai-dev-journey

./: .env.example  .gitignore  README.md  pyproject.toml
notes/: 01-02-LLM-API基础知识手册.md
phase1/: 01_hello_agent.py  02_chat_loop.py  03_function_call.py  04_react_agent.py  05_file_assistant.py  README.md
phase1/history/: chat_20260610_135343.json
phase2/: 01_embed_and_store.py  02_retrieval_search.py  03_rag_qa.py  04_code_qa_agent.py  README.md
phase2/ingest/: __init__.py  chunker.py  code_parser.py
phase3/: 01_simple_graph.py  02_react_graph.py  03_multi_step.py  04_multi_agent.py  05_dev_assistant.py  README.md
phase3/graphs/: __init__.py  coder.py  researcher.py
phase4/: 01_cost_optimizer.py  02_reliability.py  README.md
phase4/knowledge_base/: __init__.py  manager.py
phase4/portfolio/: __init__.py  demo.py
phase4/telegram_bot/: __init__.py  bot.py  handlers.py
tasks/: AI Agent 转型全任务清单.md  AI Agent 转型全任务清单（2026.06 → 2027.02）.md
utils/: AiClient.py  __init__.py
