[project]
name = "ai-dev-journey"
version = "0.1.0"
description = "AI Agent 学习项目 - 从基础到生产环境"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
phase2 = [
    "chromadb",
    "tiktoken",
]
phase3 = [
    "langgraph",
    "langchain-openai",
    "langchain-core",
]
phase4 = [
    "python-telegram-bot",
]
dev = [
    "pytest",
    "ruff",
]
